fixed customer service image size, fixed form alignment

--- a/exo-style.css
+++ b/exo-style.css
@@ -82,10 +82,13 @@ border-left-style: none;
 }
 
 textarea {
-    padding-left: 35px;
-    margin-left: 30px;
+   
     color:white;
     background-color:black
+}
+
+ul {
+    padding-left: 0;
 }
 
 form {
